2002-05-05  Roland McGrath  <roland@frob.com>

	* fakeroot.c (netfs_attempt_lookup): Check for EROFS or EISDIR error
	from O_RDWR lookup.

	* fakeroot.c (netfs_attempt_lookup): Check io_identity result for our
	own fsys identity port; on match, look up the existing node for the
	port to ourselves.

	* fakeroot.c (netfs_attempt_lookup): Unlock DIR before doing RPCs.

2002-05-03  Marcus Brinkmann  <marcus@gnu.org>

	* fakeroot.c (netfs_node_norefs): Unlock node after not dropping
	it at all.

2002-05-03  Roland McGrath  <roland@frob.com>

	* Makefile (fakeroot): New target.
	(targets): Add it.
	(SRCS): Add fakeroot.c.
	* fakeroot.c: New file.

2002-03-23  James A. Morrison  <ja2morri@uwaterloo.ca>

	* ifsock.c (main): Use ERR, not errno.
	* symlink.c: Include <error.h> and <errno.h>.
	(main): Use err, not fprintf and exit.  Use error, not perror and
	exit.  Use err, not error.  Check for MACH_PORT_NULL
	explicitly. Check for proper usage of symlink before checking if
	symlink is started as a translator.

2002-03-11  Roland McGrath  <roland@frob.com>

	* crash.c: Add `corelimit' parameter to `dump_core' forward decl.
	(S_crash_dump_task): Change caller, pass (off_t)-1 for now.
	(struct crasher): New member `core_limit'.
	(dead_crasher): Pass C->core_limit to dump_core.
	(S_crash_dump_task): Set C->core_limit, to (off_t) -1 for now.
	(dump_core): Function removed; now ../exec/elfcore.c defines it.
	* Makefile (OBJS, crash): Add elfcore.o.
	(elfcore.c): vpath decl to find this in $(top_srcdir)/exec.

2001-12-22  Roland McGrath  <roland@frob.com>

	* streamio.c (create_buffer): extern inline -> static inline
	(buffer_size, buffer_readable, buffer_writable): Likewise.
	(clear_buffer, buffer_read): Likewise.

2001-12-11  Marcus Brinkmann  <marcus@gnu.org>

	* streamio.c (device_open_reply): In the D_INVALID_OPERATION case,
	clear ERR, which is a global variable.

2001-04-01  Neal H Walfield  <neal@cs.uml.edu>

	* magic.c (trivfs_S_dir_lookup): Use iohelp_dup_iouser